k8s/traefik-ingress/traefik-Depeloyment-ssl.yaml
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-lb
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      serviceAccountName: ingress
      containers:
      - image: traefik
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
        #- name: https
         # containerPort: 443
        args:
        - --kubernetes
        - --web
        - --web.address=:8580
        - --configFile=/etc/traefik/traefik.toml
        - --web.metrics
        - --web.metrics.prometheus
        - --web.metrics.datadog.address="http://prometheus.monitoring:9090"
        volumeMounts:
        #- mountPath: "/ssl"
         # name: "ssl"
        #- mountPath: "/config"
         # name: "config" 
        - mountPath: "/log"
          name: "log"
      volumes:
      #- name: ssl
       # secret:
        # secretName: tls-secret
      #- name: config
       # configMap:
        # name: traefik-conf
      - name: log
        hostPath:
          path: /var/log/traefik
          type: Directory
