k8s/traefik-ingress/ui-ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    name: traefik
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "some arn"
spec:
  ports:
  - protocol: TCP
    name: secure
    port: 443
    targetPort: https
  - protocol: TCP
    name: insecure
    port: 80
    targetPort: http
  - protocol: TCP
    name: admin
    port: 8580
    targetPort: http
  selector:
    name: traefik-ingress-lb
