k8s/traefik-ingress/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.galen.site
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik
          servicePort: 8580
